vlib/v/checker/tests/for_in_map_one_variable_err.out
vlib/v/checker/tests/for_in_map_one_variable_err.v:3:6: error: for in: cannot use one variable in map
    1 | fn main() {
    2 |     kvs := {'foo':'bar'}
    3 |     for k in kvs {
      |         ^
    4 |         println('$k')
    5 |     }
